tests/baselines/reference/parserClassDeclaration6.errors.txt
==== tests/cases/compiler/parserClassDeclaration6.ts (3 errors) ====
    class C extends A, B {
            ~~~~~~~~~~~~
!!! parserClassDeclaration6.ts(1,9): error TS1026: Classes can only extend a single class.
                    ~
!!! parserClassDeclaration6.ts(1,17): error TS2095: Cannot find name 'A'.
                       ~
!!! parserClassDeclaration6.ts(1,20): error TS2095: Cannot find name 'B'.
    }